# swagger.json
@@ -309,59 +309,11 @@
         }
       }
     },
-    "/products/filter": {
+    "/products": {
       "get": {
         "tags": ["Products"],
         "summary": "Get recomended and not recomended products by blood type",
-        "parameters": [
-          {
-            "in": "query",
-            "name": "title",
-            "schema": {
-              "type": "string"
-            },
-            "description": "Title of products in data user"
-          },
-          {
-            "in": "query",
-            "name": "category",
-            "schema": {
-              "type": "string",
-              "enum": [
-                "alcoholic drinks",
-                "berries",
-                "cereals",
-                "dairy",
-                "dried fruits",
-                "eggs",
-                "fish",
-                "flour",
-                "fruits",
-                "meat",
-                "mushrooms",
-                "nuts",
-                "oils and fats",
-                "poppy",
-                "sausage",
-                "seeds",
-                "sesame",
-                "soft drinks",
-                "vegetables and herbs"
-              ]
-            },
-            "description": "Category of products"
-          },
-          {
-            "in": "query",
-            "name": "filter",
-            "schema": {
-              "type": "string",
-              "enum": ["all", "recommended", "not-recommended"],
-              "default": "all"
-            },
-            "description": "Filter of products"
-          }
-        ],
+        "parameters": [],
         "security": [{ "Bearer": [] }],
         "responses": {
           "201": {
@@ -389,26 +341,16 @@
         }
       }
     },
-    "exercises/filter": {
+    "/exercises": {
       "get": {
         "tags": ["Exercises"],
-        "summary": "Get required exercises",
-        "parameters": [
-          {
-            "in": "query",
-            "name": "filter",
-            "schema": {
-              "type": "string",
-              "enum": ["Body parts", "Equipment", "Muscles"],
-              "default": ""
-            },
-            "description": "Filter for exercises"
-          }
-        ],
+        "summary": "Get all exercises",
+        "parameters": [],
         "security": [{ "Bearer": [] }],
+        "requestBody": {},
         "responses": {
-          "201": {
-            "description": "Successful",
+          "200": {
+            "description": "OK",
             "content": {
               "application/json": {
                 "schema": {
@@ -417,49 +359,108 @@
               }
             }
           },
-          "401": {
-            "description": "Unauthorized",
-            "content": {}
-          },
           "404": {
-            "description": "Not found",
-            "content": {}
-          },
-          "500": {
-            "description": "Server error",
-            "content": {}
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
           }
         }
       }
     },
-    "/exercises": {
+    "/exercises/bodyparts": {
       "get": {
         "tags": ["Exercises"],
-        "summary": "Get categories of exercises",
+        "summary": "Get all body parts",
         "parameters": [],
         "security": [{ "Bearer": [] }],
+        "requestBody": {},
         "responses": {
-          "201": {
-            "description": "Successful",
+          "200": {
+            "description": "OK",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ExercisesBodyPartResponse"
+                  "$ref": "#/components/schemas/ExercisesBodyPartsResponse"
                 }
               }
             }
           },
-          "401": {
-            "description": "Unauthorized",
-            "content": {}
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/exercises/muscules": {
+      "get": {
+        "tags": ["Exercises"],
+        "summary": "Get all muscules",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {},
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ExercisesMusclesResponse"
+                }
+              }
+            }
           },
           "404": {
-            "description": "Not found",
-            "content": {}
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/exercises/equipments": {
+      "get": {
+        "tags": ["Exercises"],
+        "summary": "Get all equipments",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {},
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ExercisesEquipmentsResponse"
+                }
+              }
+            }
           },
-          "500": {
-            "description": "Server error",
-            "content": {}
+          "404": {
+            "description": "Not Found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorResponse"
+                }
+              }
+            }
           }
         }
       }
